Java17 + Spring Boot Upgrade (#191)
* Upgrade to Java 17

* Migrating entity changer from groovy to java (#183)

* First working java17 commit

* Adding the rest prefixes for the rest endpoints

* Chaning applicable functions to lambdas and updating logging to log4j2 for classes not using it

* Adding security tools

* Adding ValidationMessages, externalizing hibernate properties, removing unused values from AppSettings

* Deleting the picker folder

* Fixing up pom issues + thread ID logging + notes on json converter

* Adding some TODOs and making all ApplicationSettings final

* Adding some java docs to bean config + changing ApplicationSettings

* Changing ApplicationSettings from class to a record

* Replacing Slf4j annotation with Log4j2

* Removing solo standardSub config code + removing joda time + removing security files

* Refactoring cron trigger configuration

* Configuring beans for restTemplate + multipart resolver + locale + removing jsonconverter function

* Migrate EntityChanger from groovy to java

* Refactor java 9 deprecated code. Also made use of PropertyDescriptors instead of manually looking for getter/setters

* Enhanced error messages

* Adding null assertions in Unit test

* Testing enhancements

- Improved coverage
- Separated tests into their own, atomic methods
- Make better use of `@Before`

---------

Co-authored-by: Trevor Swartz <trevor.swartz@bullhorn.com>

* Upgrading JUnit 4 -> JUnit5 (#177)

* Updagrading from JUnit 4 to JUnit 5

* PS-31586: Fixing up compile + runtime errors in testing

* PS-31586: Cleaning up unused imports and some unnecessary config

* PS-31586: Updating DataSource in the TestConfig

* PS-31586: Adding testing scope

---------

Co-authored-by: Matthew Davino <matthew.davino@bullhorn.net>
Co-authored-by: Trevor Swartz <swartz.trevor24@gmail.com>
Co-authored-by: Trevor Swartz <trevor.swartz@bullhorn.com>

* Updating StandardEntityChangerTest to